# astrobee

./: .gitmodules
.devcontainer/: Dockerfile
astrobee/config/worlds/: discower.config
astrobee/launch/sitl/: sitl.launch.py
description/description/urdf/: model.urdf.xacro  model_mavlink.urdf.xacro
doc/general_documentation/: INSTALL.md
gnc/pmc/test/: cpp_tests.cpp  data.py  pmc_thrust_test.py
scripts/: install_opencv4.txt  px4_sitl.sh
scripts/setup/: packages_desktop_jammy.lst
scripts/setup/debians/: build_install_debians.sh  build_opencv.sh
shared/config_reader/: CMakeLists.txt
shared/ff_common/: CMakeLists.txt
shared/msg_conversions/: CMakeLists.txt
simulation/: CMakeLists.txt
simulation/scripts/: spawn_entity.py
simulation/src/gazebo_model_plugin_px4_actuation/: gazebo_model_plugin_px4_actuation.cc
simulation/src/gazebo_sensor_plugin_imu/: gazebo_sensor_plugin_imu.cc
simulation/src/gazebo_sitl_plugin_px4/: gazebo_sitl_plugin_px4.cc
